--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     font-size: 1.8rem;
     padding: 1.5rem 0; }
   .nav__logo {
-    font-family: font-500, 'sans-serif';
+    font-weight: 500;
     font-size: 2.2rem;
     text-transform: uppercase;
     line-height: 1.4;
@@ -48,14 +48,13 @@
   .banner__container {
     padding: 5rem 3rem; }
   .banner__main {
-    text-transform: uppercase;
-    font-family: font-400, 'sans-serif'; }
+    text-transform: uppercase; }
   .banner__paragraph {
     font-size: 1.4rem;
     color: var(--color-grey-light-5); }
   .banner__btn--primary {
     margin-right: 3rem;
-    font-family: font-500, 'sans-serif'; }
+    font-weight: 500; }
 
 *,
 *::after,
@@ -75,24 +74,8 @@ body {
   box-sizing: border-box;
   font-size: 1.6rem;
   line-height: 1.6;
-  font-family: font-400, 'sans-serif';
+  font-family: 'Montserrat', sans-serif;
   background-color: var(--color-grey-light-1); }
-
-@font-face {
-  font-family: font-300;
-  src: url(../fonts/Montserrat-Light.ttf); }
-
-@font-face {
-  font-family: font-400;
-  src: url(../fonts/Montserrat-Regular.ttf); }
-
-@font-face {
-  font-family: font-500;
-  src: url(../fonts/Montserrat-Medium.ttf); }
-
-@font-face {
-  font-family: font-600;
-  src: url(../fonts/Montserrat-SemiBold.ttf); }
 
 .heading-4--light {
   color: var(--color-grey-light-1); }
@@ -115,8 +98,8 @@ body {
     border: 1px solid #fff;
     transition: all .3s; }
   .btn--ghost:hover, .btn--ghost:active {
-    color: var(--color-grey-dark-5);
-    background-color: var(--color-grey-light-4); }
+    background-color: var(--color-primary-dark);
+    border: 1px solid transparent; }
 
 :root {
   --color-primary: #0f97e1;
