--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,53 @@
       outline: none;
       box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.1); }
 
+.social {
+  padding: 1.5rem 2rem;
+  background-color: var(--color-grey-dark-4); }
+  .social__container {
+    max-width: 120rem;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center; }
+  .social__link:link, .social__link:visited {
+    margin: 1rem 2rem; }
+  .social__icon {
+    fill: var(--color-primary-dark);
+    height: 5rem;
+    width: 5rem;
+    transition: fill .3s; }
+  .social__icon:hover, .social__icon:active {
+    fill: var(--color-primary); }
+
+.footer {
+  padding: 3rem 2rem;
+  background-color: var(--color-grey-dark-5); }
+  .footer__container {
+    max-width: 120rem;
+    margin: 0 auto; }
+  .footer__main {
+    display: flex;
+    justify-content: center;
+    font-size: 2.2rem;
+    margin-bottom: 1rem; }
+    .footer__main-link:link, .footer__main-link:visited {
+      color: var(--color-grey-light-5);
+      margin: 1rem 4rem;
+      transition: all .3s; }
+    .footer__main-link:hover, .footer__main-link:active {
+      color: #fff; }
+  .footer__bottom {
+    display: flex;
+    justify-content: space-between;
+    color: var(--color-grey-dark-2);
+    font-size: 1rem;
+    margin-top: 1rem; }
+    .footer__bottom-left {
+      text-transform: uppercase;
+      letter-spacing: .2rem; }
+    .footer__bottom-right a {
+      margin-left: 1rem; }
+
 *,
 *::after,
 *::before {
@@ -221,6 +268,11 @@ body {
 #current {
   border: 2px solid var(--color-primary);
   padding: .8rem; }
+
+hr {
+  height: 1px;
+  border: none;
+  background-color: var(--color-grey-dark-4); }
 
 .heading-1 {
   font-size: 2.8rem;
@@ -288,7 +340,7 @@ body {
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #555;
   --color-grey-dark-4: #333;
-  --color-grey-dark-5: #182024;
+  --color-grey-dark-5: #252525;
   --color-grey-dark-6: #0a0e10;
   --color-invalid: #cc3838;
   --shadow-dark: 0 2 6 rgba(0,0,0,.3);
